--- a/DatabaseSample2/app/src/main/res/layout/activity_cocktail_memo_add.xml
+++ b/DatabaseSample2/app/src/main/res/layout/activity_cocktail_memo_add.xml
@@ -2,7 +2,7 @@
 <!--
 『Androidアプリ開発の教科書』
 第10章
-データベースサンプル
+データベースサンプル改
 
 @author Shinzo SAITO
 
@@ -27,12 +27,11 @@
 		android:text="@string/tv_name"
 		android:textSize="20sp"/>
 
-	<TextView
-		android:id="@+id/tvCocktailName"
-		android:layout_width="wrap_content"
+	<EditText
+		android:id="@+id/etCocktailName"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="10dp"
-		android:textSize="20sp"/>
+		android:layout_marginBottom="10dp"/>
 
 	<TextView
 		android:layout_width="wrap_content"
