--- a/ConstraintLayoutSample/app/src/main/res/layout/activity_constraint_layout.xml
+++ b/ConstraintLayoutSample/app/src/main/res/layout/activity_constraint_layout.xml
@@ -14,138 +14,130 @@ ConstraintLayoutサンプル
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context="com.websarva.wings.android.constraintlayoutsample.ConstraintLayoutActivity">
+	tools:context="com.websarva.wings.android.constraintlayoutsample.ConstraintLayoutActivity"
+	tools:layout_editor_absoluteX="0dp"
+	tools:layout_editor_absoluteY="81dp">
 
 	<TextView
 		android:id="@+id/tvTitle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/tv_title"
-		app:layout_constraintTop_toTopOf="parent"
+		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
-		android:layout_marginLeft="8dp"
-		app:layout_constraintLeft_toLeftOf="parent"
-		android:layout_marginStart="8dp"/>
+		android:text="@string/tv_title"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"/>
 
 	<TextView
 		android:id="@+id/tvName"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
 		android:text="@string/tv_name"
-		android:layout_marginLeft="8dp"
-		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintBaseline_toBaselineOf="@+id/etName"
-		android:layout_marginStart="8dp"/>
+		app:layout_constraintStart_toStartOf="parent"/>
 
 	<EditText
 		android:id="@+id/etName"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="8dp"
-		android:layout_marginRight="8dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
 		android:ems="10"
 		android:inputType="textPersonName"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/tvTitle"
-		app:layout_constraintHorizontal_bias="0.0"
-		app:layout_constraintLeft_toLeftOf="@+id/guideline"
-		android:layout_marginStart="8dp"
-		android:layout_marginEnd="8dp"/>
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="@+id/guideline"
+		app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
 
 	<TextView
 		android:id="@+id/tvMail"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="8dp"
+		android:layout_marginStart="8dp"
 		android:text="@string/tv_mail"
-		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintBaseline_toBaselineOf="@+id/etMail"
-		android:layout_marginStart="8dp"/>
+		app:layout_constraintStart_toStartOf="parent"/>
 
 	<EditText
 		android:id="@+id/etMail"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
 		android:ems="10"
 		android:inputType="textEmailAddress"
-		android:layout_marginTop="7dp"
-		app:layout_constraintTop_toBottomOf="@+id/etName"
-		android:layout_marginLeft="8dp"
-		android:layout_marginRight="8dp"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintHorizontal_bias="0.0"
-		app:layout_constraintLeft_toLeftOf="@+id/guideline"
-		android:layout_marginStart="8dp"
-		android:layout_marginEnd="8dp"/>
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="@+id/guideline"
+		app:layout_constraintTop_toBottomOf="@+id/etName"/>
 
 	<TextView
 		android:id="@+id/tvComment"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/tv_comment"
+		android:layout_marginStart="8dp"
 		android:layout_marginTop="8dp"
-		app:layout_constraintTop_toBottomOf="@+id/etMail"
-		android:layout_marginLeft="8dp"
-		app:layout_constraintLeft_toLeftOf="parent"
-		android:layout_marginStart="8dp"/>
+		android:text="@string/tv_comment"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/etMail"/>
 
 	<EditText
 		android:id="@+id/etComment"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
+		android:layout_marginBottom="8dp"
+		android:layout_marginEnd="8dp"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
 		android:ems="10"
 		android:inputType="textMultiLine"
-		android:layout_marginTop="8dp"
-		app:layout_constraintTop_toBottomOf="@+id/tvComment"
-		android:layout_marginLeft="8dp"
-		app:layout_constraintLeft_toLeftOf="parent"
-		android:layout_marginRight="8dp"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintHorizontal_bias="0.0"
-		android:layout_marginStart="8dp"
-		android:layout_marginEnd="8dp"
-		android:layout_marginBottom="8dp"
-		app:layout_constraintBottom_toTopOf="@+id/btSend"/>
+		app:layout_constraintBottom_toTopOf="@+id/btSend"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/tvComment"/>
 
 	<android.support.constraint.Guideline
 		android:id="@+id/guideline"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:orientation="vertical"
-		app:layout_constraintGuide_begin="115dp"
-		tools:layout_editor_absoluteY="0dp"
-		tools:layout_editor_absoluteX="115dp"/>
+		app:layout_constraintGuide_begin="115dp"/>
 
 	<Button
 		android:id="@+id/btConfirm"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:layout_marginBottom="8dp"
+		android:layout_marginEnd="8dp"
 		android:text="@string/bt_confirm"
-		app:layout_constraintRight_toLeftOf="@+id/btSend"
 		app:layout_constraintBottom_toBottomOf="parent"
-		android:layout_marginBottom="10dp"
-		app:layout_constraintLeft_toLeftOf="parent"
-		app:layout_constraintHorizontal_chainStyle="spread"/>
+		app:layout_constraintEnd_toStartOf="@+id/btSend"
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintHorizontal_chainStyle="spread"
+		app:layout_constraintStart_toStartOf="parent"/>
 
 	<Button
 		android:id="@+id/btSend"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:layout_marginBottom="8dp"
+		android:layout_marginEnd="8dp"
 		android:text="@string/bt_send"
-		app:layout_constraintRight_toLeftOf="@+id/btClear"
 		app:layout_constraintBottom_toBottomOf="parent"
-		android:layout_marginBottom="10dp"
-		app:layout_constraintLeft_toRightOf="@+id/btConfirm"/>
+		app:layout_constraintEnd_toStartOf="@+id/btClear"
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintStart_toEndOf="@+id/btConfirm"/>
 
 	<Button
 		android:id="@+id/btClear"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
+		android:layout_width="0dp"
+		android:layout_height="52dp"
+		android:layout_marginBottom="8dp"
 		android:text="@string/bt_clear"
 		app:layout_constraintBottom_toBottomOf="parent"
-		android:layout_marginBottom="10dp"
-		app:layout_constraintRight_toRightOf="parent"
-		app:layout_constraintLeft_toRightOf="@+id/btSend"/>
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintHorizontal_bias="0.5"
+		app:layout_constraintStart_toEndOf="@+id/btSend"/>
 
 </android.support.constraint.ConstraintLayout>
