--- a/FragmentSample/app/src/main/res/layout/fragment_menu_thanks.xml
+++ b/FragmentSample/app/src/main/res/layout/fragment_menu_thanks.xml
@@ -8,7 +8,7 @@
 
 @author Shinzo SAITO
 
-ファイル名=activity_menu_thanks.xml
+ファイル名=fragment_menu_thanks.xml
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 			  android:layout_width="match_parent"
