--- a/ViewSample/app/src/main/res/layout/activity_view_sample.xml
+++ b/ViewSample/app/src/main/res/layout/activity_view_sample.xml
@@ -8,13 +8,15 @@
 
 ファイル名=activity_view_sample.xml
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:background="#A1A9BA"
-			  android:orientation="vertical">
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:background="#A1A9BA"
+	android:orientation="vertical">
 
 	<TextView
+		android:id="@+id/tvLabelInput"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginBottom="10dp"
@@ -98,8 +100,8 @@
 
 	<ListView
 		android:layout_width="match_parent"
-		android:layout_height="150dp"
+		android:layout_height="0dp"
+		android:layout_weight="1"
 		android:background="#ffffff"
 		android:entries="@array/lv_cocktaillist"/>
-
 </LinearLayout>
