--- a/ListViewSample2/app/src/main/res/layout/activity_list_view_sample2.xml
+++ b/ListViewSample2/app/src/main/res/layout/activity_list_view_sample2.xml
@@ -8,7 +8,8 @@
 
 ファイル名=activity_list_view_sample.xml
 -->
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-		  android:id="@+id/lvMenu"
-		  android:layout_width="match_parent"
-		  android:layout_height="match_parent" />
+<ListView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/lvMenu"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"/>
