--- a/MenuSample/app/src/main/res/layout/activity_menu_list.xml
+++ b/MenuSample/app/src/main/res/layout/activity_menu_list.xml
@@ -10,7 +10,8 @@
 
 ファイル名=activity_menu_list.xml
 -->
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
-		  android:id="@+id/lvMenu"
-		  android:layout_width="match_parent"
-		  android:layout_height="match_parent" />
+<ListView
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/lvMenu"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"/>
