--- a/LifeCycleSample/app/src/main/res/layout/activity_life_cycle_main.xml
+++ b/LifeCycleSample/app/src/main/res/layout/activity_life_cycle_main.xml
@@ -10,10 +10,11 @@
 
 ファイル名=activity_life_cycle_main.xml
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:orientation="vertical">
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
 	<Button
 		android:id="@+id/btNext"
