--- a/LifeCycleSample/app/src/main/res/layout/activity_life_cycle_sub.xml
+++ b/LifeCycleSample/app/src/main/res/layout/activity_life_cycle_sub.xml
@@ -10,16 +10,17 @@
 
 ファイル名=activity_life_cycle_sub.xml
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-			  android:layout_width="match_parent"
-			  android:layout_height="match_parent"
-			  android:orientation="vertical" >
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical">
 
 	<Button
 		android:id="@+id/btPrevious"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:onClick="onButtonClick"
-		android:text="@string/bt_precious" />
+		android:text="@string/bt_precious"/>
 
 </LinearLayout>
