--- a/ViewSample/app/src/main/res/layout/activity_main.xml
+++ b/ViewSample/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
 @author Shinzo SAITO
 
-ファイル名=activity_view_sample.xml
+ファイル名=activity_main.xml
 -->
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
@@ -96,7 +96,7 @@
 		android:id="@+id/btSave"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/bt_save"/>
+		android:text="@string/bt_save" />
 
 	<ListView
 		android:layout_width="match_parent"
