--- a/ListViewSample2/app/src/main/res/layout/activity_main.xml
+++ b/ListViewSample2/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
 @author Shinzo SAITO
 
-ファイル名=activity_list_view_sample.xml
+ファイル名=activity_main.xml
 -->
 <ListView
 	xmlns:android="http://schemas.android.com/apk/res/android"
