--- a/LifeCycleSample/app/src/main/res/layout/activity_sub.xml
+++ b/LifeCycleSample/app/src/main/res/layout/activity_sub.xml
@@ -8,7 +8,7 @@
 
 @author Shinzo SAITO
 
-ファイル名=activity_life_cycle_sub.xml
+ファイル名=activity_sub.xml
 -->
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
@@ -22,5 +22,4 @@
 		android:layout_height="wrap_content"
 		android:onClick="onButtonClick"
 		android:text="@string/bt_previous"/>
-
 </LinearLayout>
