--- a/MenuSample/app/src/main/res/layout/row.xml
+++ b/MenuSample/app/src/main/res/layout/row.xml
@@ -17,7 +17,7 @@
 	android:orientation="vertical">
 
 	<TextView
-		android:id="@+id/tvMenuName"
+		android:id="@+id/tvMenuNameRow"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="10dp"
@@ -32,7 +32,7 @@
 		android:orientation="horizontal">
 
 		<TextView
-			android:id="@+id/tvMenuPrice"
+			android:id="@+id/tvMenuPriceRow"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textSize="14sp"/>
