--- a/DatabaseSample/app/src/main/res/layout/activity_main.xml
+++ b/DatabaseSample/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
 
 @author Shinzo SAITO
 
-ファイル名=activity_cocktail_memo.xml
+ファイル名=activity_main.xml
 -->
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
@@ -57,5 +57,4 @@
 		android:enabled="false"
 		android:onClick="onSaveButtonClick"
 		android:text="@string/btn_save"/>
-
 </LinearLayout>
