--- a/FragmentSample/app/src/main/res/layout-xlarge/activity_main.xml
+++ b/FragmentSample/app/src/main/res/layout-xlarge/activity_main.xml
@@ -28,6 +28,7 @@
 		android:id="@+id/menuThanksFrame"
 		android:layout_width="0dp"
 		android:layout_height="match_parent"
+		android:layout_marginRight="10dp"
 		android:layout_marginLeft="50dp"
 		android:layout_weight="0.6"
 		android:background="?android:attr/detailsElementBackground"/>
