第15章「カメラアプリ連携サンプル」を第2版に合わせて改変。

--- a/CameraIntentSample/app/src/main/res/layout/activity_main.xml
+++ b/CameraIntentSample/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
 @author Shinzo SAITO
 
-ファイル名=activity_use_camera.xml
+ファイル名=activity_main.xml
 -->
 <ImageView
 	xmlns:android="http://schemas.android.com/apk/res/android"
