--- a/RecyclerViewSample/app/src/main/res/layout/row.xml
+++ b/RecyclerViewSample/app/src/main/res/layout/row.xml
@@ -15,6 +15,13 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="vertical">
+<!--<LinearLayout-->
+<!--	xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--	android:layout_width="match_parent"-->
+<!--	android:layout_height="wrap_content"-->
+<!--	android:background="@android:color/darker_gray"-->
+<!--	android:layout_margin="10dp"-->
+<!--	android:orientation="vertical">-->
 
 	<TextView
 		android:id="@+id/tvMenuNameRow"
