--- a/RecyclerViewSample/app/src/main/res/layout/row.xml
+++ b/RecyclerViewSample/app/src/main/res/layout/row.xml
@@ -15,9 +15,16 @@
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
 	android:orientation="vertical">
+<!--<LinearLayout-->
+<!--	xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--	android:layout_width="match_parent"-->
+<!--	android:layout_height="wrap_content"-->
+<!--	android:background="@android:color/darker_gray"-->
+<!--	android:layout_margin="10dp"-->
+<!--	android:orientation="vertical">-->
 
 	<TextView
-		android:id="@+id/tvMenuName"
+		android:id="@+id/tvMenuNameRow"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="10dp"
@@ -27,12 +34,12 @@
 	<LinearLayout
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:layout_marginBottom="10dp"
 		android:layout_marginLeft="10dp"
+		android:layout_marginBottom="10dp"
 		android:orientation="horizontal">
 
 		<TextView
-			android:id="@+id/tvMenuPrice"
+			android:id="@+id/tvMenuPriceRow"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:textSize="14sp"/>
@@ -42,7 +49,5 @@
 			android:layout_height="wrap_content"
 			android:text="@string/tv_menu_unit"
 			android:textSize="14sp"/>
-
 	</LinearLayout>
-
 </LinearLayout>
