--- a/ViewBinderSample/app/src/main/res/layout/activity_main.xml
+++ b/ViewBinderSample/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@ ViewBinderサンプル
 
 @author Shinzo SAITO
 
-ファイル名=activity_name_list.xml
+ファイル名=activity_main.xml
 -->
 <ListView
 	xmlns:android="http://schemas.android.com/apk/res/android"
