--- a/LifeCycleSample/app/src/main/res/layout/activity_sub.xml
+++ b/LifeCycleSample/app/src/main/res/layout/activity_sub.xml
@@ -10,16 +10,24 @@
 
 ファイル名=activity_sub.xml
 -->
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical">
+	tools:context=".SubActivity">
 
 	<Button
 		android:id="@+id/btPrevious"
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:layout_marginEnd="8dp"
 		android:onClick="onButtonClick"
-		android:text="@string/bt_previous"/>
-</LinearLayout>
+		android:text="@string/bt_previous"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
