--- a/MenuSample/app/src/main/res/layout/row.xml
+++ b/MenuSample/app/src/main/res/layout/row.xml
@@ -1,5 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+『Androidアプリ開発の教科書』
+第8章
+メニューサンプル
+
+リスト画面各行のレイアウトファイル。
+
+@author Shinzo SAITO
+
+ファイル名=row.xml
+-->
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
