--- a/MediaSample/app/src/main/res/layout/activity_main.xml
+++ b/MediaSample/app/src/main/res/layout/activity_main.xml
@@ -10,46 +10,59 @@
 
 ファイル名=activity_main.xml
 -->
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="wrap_content"
-	android:orientation="vertical">
+	android:layout_height="match_parent"
+	tools:context=".MainActivity">
 
-	<LinearLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
-		android:orientation="horizontal">
+	<Button
+		android:id="@+id/btBack"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:enabled="false"
+		android:onClick="onBackButtonClick"
+		android:text="@string/bt_back"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
-		<Button
-			android:id="@+id/btBack"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:enabled="false"
-			android:onClick="onBackButtonClick"
-			android:text="@string/bt_back"/>
+	<Button
+		android:id="@+id/btForward"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="8dp"
+		android:layout_marginEnd="8dp"
+		android:enabled="false"
+		android:onClick="onForwardButtonClick"
+		android:text="@string/bt_forward"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
-		<Button
-			android:id="@+id/btPlay"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:enabled="false"
-			android:onClick="onPlayButtonClick"
-			android:text="@string/bt_play_play"/>
-
-		<Button
-			android:id="@+id/btForward"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:enabled="false"
-			android:onClick="onForwardButtonClick"
-			android:text="@string/bt_forward"/>
-	</LinearLayout>
+	<Button
+		android:id="@+id/btPlay"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:layout_marginEnd="8dp"
+		android:enabled="false"
+		android:onClick="onPlayButtonClick"
+		android:text="@string/bt_play_play"
+		app:layout_constraintEnd_toStartOf="@+id/btForward"
+		app:layout_constraintStart_toEndOf="@+id/btBack"
+		app:layout_constraintTop_toTopOf="parent" />
 
 	<com.google.android.material.switchmaterial.SwitchMaterial
 		android:id="@+id/swLoop"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="@string/sw_loop"/>
-</LinearLayout>
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:text="@string/sw_loop"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/btBack" />
+</androidx.constraintlayout.widget.ConstraintLayout>
