第13章「サービスサンプル」を第3版に合わせて改変。

--- a/ServiceSample/app/src/main/res/layout/activity_main.xml
+++ b/ServiceSample/app/src/main/res/layout/activity_main.xml
@@ -10,24 +10,38 @@
 
 ファイル名=activity_main.xml
 -->
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical">
+	tools:context=".MainActivity">
 
 	<Button
 		android:id="@+id/btPlay"
-		android:layout_width="match_parent"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:layout_marginEnd="8dp"
 		android:onClick="onPlayButtonClick"
-		android:text="@string/bt_play_play"/>
+		android:text="@string/bt_play_play"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent" />
 
 	<Button
 		android:id="@+id/btStop"
-		android:layout_width="match_parent"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
+		android:layout_marginEnd="8dp"
 		android:enabled="false"
 		android:onClick="onStopButtonClick"
-		android:text="@string/bt_play_stop"/>
-</LinearLayout>
+		android:text="@string/bt_play_stop"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/btPlay" />
+</androidx.constraintlayout.widget.ConstraintLayout>
