--- a/RecyclerViewSample/app/src/main/res/layout/activity_main.xml
+++ b/RecyclerViewSample/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
 	</com.google.android.material.appbar.AppBarLayout>
 
 	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/lvMenu"
+		android:id="@+id/rvMenu"
 		android:scrollbars="vertical"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
