第16章「スクロール連動サンプル」にcontentDescriptionを追加。

--- a/CoordinatorLayoutSample/app/src/main/res/layout/activity_main.xml
+++ b/CoordinatorLayoutSample/app/src/main/res/layout/activity_main.xml
@@ -55,5 +55,6 @@
 		android:layout_margin="20dp"
 		app:layout_anchor="@id/appbar"
 		app:layout_anchorGravity="bottom|end"
-		app:srcCompat="@android:drawable/ic_dialog_email"/>
+		app:srcCompat="@android:drawable/ic_dialog_email"
+		android:contentDescription="@string/fab_desc"/>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
