--- a/ViewSample/app/src/main/res/layout/activity_main.xml
+++ b/ViewSample/app/src/main/res/layout/activity_main.xml
@@ -19,18 +19,18 @@
 		android:id="@+id/tvLabelInput"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="10dp"
-		android:layout_marginTop="5dp"
+		android:layout_marginBottom="16dp"
+		android:layout_marginTop="8dp"
 		android:background="#ffffff"
 		android:text="@string/tv_msg"
-		android:textSize="25sp"/>
+		android:textSize="24sp"/>
 
 	<EditText
 		android:id="@+id/etInput"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="25dp"
-		android:layout_marginTop="5dp"
+		android:layout_marginBottom="24dp"
+		android:layout_marginTop="8dp"
 		android:background="#ffffff"
 		android:inputType="text"/>
 
@@ -44,7 +44,7 @@
 			android:id="@+id/cbDrink"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginRight="25dp"
+			android:layout_marginEnd="24dp"
 			android:background="#ffffff"
 			android:text="@string/cb_drink"/>
 
@@ -59,19 +59,19 @@
 	<RadioGroup
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
-		android:layout_marginBottom="10dp"
-		android:layout_marginTop="10dp"
+		android:layout_marginBottom="8dp"
+		android:layout_marginTop="8dp"
 		android:background="#df7401"
 		android:orientation="horizontal"
-		android:paddingBottom="10dp"
-		android:paddingTop="10dp">
+		android:paddingBottom="8dp"
+		android:paddingTop="8dp">
 
 		<RadioButton
 			android:id="@+id/rbMale"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginLeft="25dp"
-			android:layout_marginRight="25dp"
+			android:layout_marginStart="24dp"
+			android:layout_marginEnd="24dp"
 			android:background="#ffffff"
 			android:text="@string/rb_male"/>
 
@@ -89,12 +89,12 @@
 		android:layout_height="wrap_content"
 		android:background="#ffffff"
 		android:entries="@array/sp_currylist"
-		android:paddingBottom="5dp"
-		android:paddingTop="5dp"/>
+		android:paddingBottom="8dp"
+		android:paddingTop="8dp"/>
 
 	<Button
 		android:id="@+id/btSave"
-		android:layout_width="wrap_content"
+		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:text="@string/bt_save" />
 
