--- a/ConstraintLayoutSample/app/src/main/res/layout/activity_main.xml
+++ b/ConstraintLayoutSample/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--
+『Androidアプリ開発の教科書』
+第6章
+ConstraintLayoutサンプル
+
+@author Shinzo SAITO
+
+activity_main.xmlファイル
+-->
+<androidx.constraintlayout.widget.ConstraintLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
@@ -11,7 +21,6 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:layout_marginLeft="8dp"
 		android:layout_marginTop="8dp"
 		android:text="@string/tv_title"
 		app:layout_constraintStart_toStartOf="parent"
@@ -22,7 +31,6 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:layout_marginLeft="8dp"
 		android:text="@string/tv_name"
 		app:layout_constraintBaseline_toBaselineOf="@+id/etName"
 		app:layout_constraintStart_toStartOf="parent" />
@@ -32,10 +40,8 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:layout_marginLeft="8dp"
 		android:layout_marginTop="8dp"
 		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
 		android:ems="10"
 		android:inputType="textPersonName"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -47,7 +53,6 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:layout_marginLeft="8dp"
 		android:text="@string/tv_mail"
 		app:layout_constraintBaseline_toBaselineOf="@+id/etMail"
 		app:layout_constraintStart_toStartOf="parent" />
@@ -57,10 +62,8 @@
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:layout_marginLeft="8dp"
 		android:layout_marginTop="8dp"
 		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
 		android:ems="10"
 		android:inputType="textEmailAddress"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -72,21 +75,18 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:layout_marginLeft="8dp"
 		android:layout_marginTop="8dp"
 		android:text="@string/tv_comment"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/etMail" />
 
 	<EditText
-		android:id="@+id/editTextTextMultiLine"
+		android:id="@+id/etComment"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		android:layout_marginStart="8dp"
-		android:layout_marginLeft="8dp"
 		android:layout_marginTop="8dp"
 		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
 		android:layout_marginBottom="8dp"
 		android:ems="10"
 		android:gravity="start|top"
@@ -108,9 +108,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="8dp"
-		android:layout_marginLeft="8dp"
 		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
 		android:layout_marginBottom="8dp"
 		android:text="@string/bt_confirm"
 		app:layout_constraintBottom_toBottomOf="parent"
@@ -123,8 +121,8 @@
 		android:id="@+id/btSend"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
 		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
 		android:layout_marginBottom="8dp"
 		android:text="@string/bt_send"
 		app:layout_constraintBottom_toBottomOf="parent"
@@ -136,8 +134,8 @@
 		android:id="@+id/btClear"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
 		android:layout_marginEnd="8dp"
-		android:layout_marginRight="8dp"
 		android:layout_marginBottom="8dp"
 		android:text="@string/bt_clear"
 		app:layout_constraintBottom_toBottomOf="parent"
