--- a/AsyncSample/app/src/main/res/layout/activity_main.xml
+++ b/AsyncSample/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@ Web API連携サンプル
 		android:layout_marginTop="8dp"
 		android:layout_marginEnd="8dp"
 		android:text="@string/tv_winfo_title"
-		android:textSize="25sp"
+		android:textSize="24sp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="@+id/glLvCityList" />
@@ -49,6 +49,8 @@ Web API連携サンプル
 		android:id="@+id/tvWeatherTelop"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:layout_marginTop="8dp"
 		android:textSize="20sp"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/tvWinfoTitle" />
